# the-data-platform

./: .env.example  .gitignore  .release-please-manifest.json  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  README.org  SAMPLE-SERVICE-ECONOMIC-ANALYSIS.md  SAMPLE-SERVICE.md  TOOLING.md  backlog.org  progress.txt  release-please-config.json  skills-lock.json
.claude/skills/: helm-chart-development
docs/: asyncapi.md  branch_deployments.md  change_data_capture.md  data_catalogue.md  data_lakehouse.md  data_lineage.md  data_versioning.md  data_warehouse.md  dynamic_workflows.md  integration_patterns.md  schema-registry-1.md  schema_registry.md  synchronization.md
monorepo/: .bazelignore  .bazelrc  .dockerignore  .gitignore  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  Tiltfile
monorepo/deploy/: BUILD.bazel  README.md
monorepo/deploy/argocd/: README.md  appproject-bootstrap.yaml  appproject.yaml  root-app-dev.yaml
monorepo/deploy/argocd/apps/: schema-registry-local.yaml  schema-registry-production.yaml  schema-registry.yaml
monorepo/deploy/argocd/apps/dev/: network-policies.yaml  schema-registry.yaml
monorepo/deploy/argocd/apps/production/: schema-registry.yaml
monorepo/deploy/argocd/network-policies/: allow-egress-github.yaml  allow-egress-kube-api.yaml  allow-inter-component.yaml  allow-traefik-ingress.yaml  default-deny.yaml  tdp-allow-alloy.yaml  tdp-allow-postgres.yaml  tdp-default-deny.yaml
monorepo/deploy/argocd/rbac/: clusterrole.yaml  clusterrolebinding.yaml  namespace-role.yaml
monorepo/deploy/charts/common/: Chart.yaml  values.yaml
monorepo/deploy/charts/common/templates/: _deployment.tpl  _helpers.tpl  _ingress.tpl  _service.tpl
monorepo/deploy/charts/schema-registry/: Chart.yaml  values-dev.yaml  values-local.yaml  values-production.yaml  values.schema.json  values.yaml
monorepo/deploy/charts/schema-registry/charts/: common-0.1.0.tgz
monorepo/deploy/charts/schema-registry/templates/: NOTES.txt  configmap.yaml  migration-job.yaml  pdb.yaml
monorepo/deploy/charts/schema-registry/templates/tests/: test-connection.yaml
monorepo/deploy/postgres/: cluster-local.yaml  db-credentials-local.yaml  superuser-secret-local.yaml
monorepo/infra/: BUILD.bazel  README.md
monorepo/infra/cluster/: Pulumi.dev.yaml  Pulumi.local.yaml  Pulumi.production.yaml  Pulumi.yaml  database-credentials.ts  index.ts  package-lock.json  package.json  tsconfig.json
monorepo/infra/cluster/providers/: index.ts  k3d.ts  linode-k3s.ts
monorepo/infra/components/: index.ts  package-lock.json  package.json  service-deployment.ts  tsconfig.json
monorepo/infra/docs/: app-secrets.md
monorepo/infra/platform/: Pulumi.dev.yaml  Pulumi.local.yaml  Pulumi.production.yaml  Pulumi.yaml  app-secrets.ts  index.ts  package-lock.json  package.json  tsconfig.json
monorepo/infra/platform/charts/: alloy.ts  argocd.ts  cert-manager.ts  cnpg-monitoring.ts  cnpg.ts  monitoring.ts  tempo.ts
monorepo/infra/scripts/: _helpers.sh  dev-down.sh  dev-up.sh  local-down.sh  local-up.sh  production-down.sh  production-up.sh  smoke-test.sh  ui-access.sh
monorepo/libs/: BUILD.bazel  README.md
monorepo/libs/tdp-db/: BUILD.bazel  pyproject.toml
monorepo/libs/tdp-db/src/tdp_db/: __init__.py  base.py  mixins.py  types.py
monorepo/libs/tdp-db/tests/: test_base.py
monorepo/libs/tdp-fastapi-core/: pyproject.toml
monorepo/libs/tdp-fastapi-core/src/tdp_fastapi_core/: __init__.py  exceptions.py  logging.py  middleware.py  telemetry.py
monorepo/libs/tdp-fastapi-core/tests/: test_exceptions.py  test_logging.py  test_middleware.py  test_telemetry.py
monorepo/pipelines/: BUILD.bazel  README.md
monorepo/schemas/: BUILD.bazel  README.md
monorepo/scripts/: BUILD.bazel  README.md  affected.sh  build-image.sh  build.sh  check-lib-versions.py  lint-charts.sh  render-diagrams.sh  test.sh
monorepo/sdks/: BUILD.bazel  README.md
monorepo/services/: BUILD.bazel  Dockerfile.base  README.md  requirements-base.txt
monorepo/services/example/: Dockerfile  main.py
monorepo/services/schema-registry/: .copier-answers.yml  .dockerignore  .gitignore  BUILD.bazel  CHANGELOG.md  Dockerfile  README.md  alembic.ini  entrypoint.sh  gunicorn_conf.py  logging_config.py  main.py  pyproject.toml  requirements.in  requirements.txt
monorepo/services/schema-registry/.hypothesis/constants/: 0f78451983f9b127  1a929cd1538307cd  3518e019eed2a756  4e1c44eaf2673f32  59afb3060bbf4f76  605826f5ea1568d4  67687b6dd4d60990  6c53e3c61ac06869  c20d2e51e55c1052  e467f26d71e26664
monorepo/services/schema-registry/alembic/: env.py
monorepo/services/schema-registry/alembic/versions/: 2026_03_12_0001-001_initial_schema_tables.py
monorepo/services/schema-registry/src/schema_registry/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  schemas.py  telemetry.py
monorepo/services/schema-registry/src/schema_registry/models/: __init__.py  schema.py
monorepo/services/schema-registry/src/schema_registry/routers/: health.py  schemas.py
monorepo/services/schema-registry/tests/: conftest.py  test_health.py  test_models.py  test_properties.py  test_routes.py  test_schemas.py
monorepo/tools/: BUILD.bazel  README.md
monorepo/tools/architecture-diagram/: BUILD.bazel  README.md  mermaidrc.json  package.json  pnpm-lock.yaml
monorepo/tools/architecture-diagram/diagrams/: c4-container.d2  c4-container.mmd  c4-context.d2  c4-context.mmd  sample.mmd
monorepo/workflows/: BUILD.bazel  README.md
scripts/: check-template-drift.sh  lnav-stern  new-service.sh  setup-ai-tools.sh  stern-to-lnav
tasks/: prd-argocd-gitops-deployment.json  prd-copier-ci-docs.json  prd-copier-shared-libs.json  prd-copier-template.json  prd-dev-env-cluster.json  prd-dev-env-platform-config.json  prd-dev-env-scripts.json  prd-dev-env-testing-docs.json  prd-distributed-tracing.json  prd-kubernetes-local-development.json  prd-monorepo-bootstrap.json  prd-postgres-infra-app.json  prd-postgres-infra-ops.json  prd-release-management.json
tmuxinator/: dev.yml  local.yml  production.yml
(+62 files in other folders)
