load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "schema_registry",
    srcs = glob(["src/schema_registry/**/*.py"]),
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "@pip//fastapi",
        "@pip//pydantic",
        "@pip//pydantic_settings",
        "@pip//uvicorn",
        "@pip//opentelemetry_api",
        "@pip//opentelemetry_sdk",
        "@pip//sqlalchemy",
        "@pip//alembic",
    ],
)

py_binary(
    name = "schema-registry",
    srcs = ["src/schema_registry/main.py"],
    main = "src/schema_registry/main.py",
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        ":schema_registry",
    ],
)

py_test(
    name = "test_health",
    srcs = ["tests/test_health.py"],
    imports = ["."],
    deps = [
        ":schema_registry",
        "@pip//pytest",
        "@pip//pytest_asyncio",
        "@pip//httpx",
    ],
)

py_test(
    name = "test_schemas",
    srcs = ["tests/test_schemas.py"],
    imports = ["."],
    deps = [
        ":schema_registry",
        "@pip//pytest",
        "@pip//polyfactory",
    ],
)

py_test(
    name = "test_properties",
    srcs = ["tests/test_properties.py"],
    imports = ["."],
    deps = [
        ":schema_registry",
        "@pip//pytest",
        "@pip//hypothesis",
        "@pip//icontract",
    ],
)
