[project]
name = "schema-registry"
version = "0.1.0"
description = "Schema Registry service for The Data Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "tdp-fastapi-core>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
